# rust-whoami

./: Cargo.toml  LICENSE  README.md  learning-resources.md
src/: error.rs  lib.rs  main.rs  utils.rs
src/handlers/: whoami.rs
src/models/: whoami.rs
tests/: api_test.rs
