[package]
name = "whoami-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.0"

[dev-dependencies]
tokio-test = "0.4"
http = "1.0"
tower = { version = "0.5.2", features = ["util"] }